modifications to run notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -22,6 +22,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!git clone https://github.com/sven-h/LLMs4IE.git\n",
+    "!mv LLMs4IE/* .\n",
+    "!rm -r LLMs4IE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "!pip install -r requirements.txt"
    ]
   },
