--- a/main.ipynb
+++ b/main.ipynb
@@ -42,9 +42,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# provide your OpenAI API key\n",
+    "# provide your OpenAI and LangSmith API key\n",
     "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
+    "os.environ[\"LANGCHAIN_API_KEY\"] = \"\""
    ]
   },
   {
